Agrega soporte a busquedas por id de usuario
