# api/controllers/notes.controller.js
@@ -2,8 +2,10 @@ const asyncHandler = require('express-async-handler');
 const notesService = require('../services/notes.service');
 
 const getNotes = async (req, res) => {
+    const params = req.swagger.params;
+    const userId = params.userId.value;
     try {
-        const notes = await notesService.getNotes();
+        const notes = await notesService.getNotes(userId);
         res.json(notes);
     } catch (ex) {
         res.status(500).json({ error: ex });
@@ -13,9 +15,14 @@ const getNotes = async (req, res) => {
 const findNote = async (req, res) => {
     const params = req.swagger.params;
     const noteId = params.noteId.value;
+    const userId = params.userId.value;
     try {
-        const note = await notesService.findNote(noteId);
-        res.json(note);
+        const note = await notesService.findNote(userId, noteId);
+        if(note) {
+            res.json(note);
+        } else {
+            res.status(204).json();
+        }
     } catch (ex) {
         res.status(500).json({ error: ex });
     }
@@ -23,9 +30,10 @@ const findNote = async (req, res) => {
 
 const saveNote = async (req, res) => {
     const params = req.swagger.params;
+    const userId = params.userId.value;
     const note = params.body.value;
     try {
-        await notesService.saveNote(note);
+        await notesService.saveNote(userId, note);
         res.status(201).json();
     } catch (ex) {
         res.status(500).json({ error: ex });
@@ -35,9 +43,10 @@ const saveNote = async (req, res) => {
 const updateNote = async (req, res) => {
     const params = req.swagger.params;
     const noteId = params.noteId.value;
+    const userId = params.userId.value;
     const note = params.body.value;
     try {
-        await notesService.updateNote(noteId, note);
+        await notesService.updateNote(userId, noteId, note);
         res.status(200).json();
     } catch (ex) {
         res.status(500).json({ error: ex });
@@ -47,8 +56,9 @@ const updateNote = async (req, res) => {
 const deleteNote = async (req, res) => {
     const params = req.swagger.params;
     const noteId = params.noteId.value;
+    const userId = params.userId.value;
     try {
-        await notesService.deleteNote(noteId);
+        await notesService.deleteNote(userId, noteId);
         res.status(200).json();
     } catch (ex) {
         res.status(500).json({ error: ex });
